add view update demo

--- a/src/Module1/Pages/SingleViewCode.cshtml
+++ b/src/Module1/Pages/SingleViewCode.cshtml
@@ -14,5 +14,7 @@
 
 <div class="text-center">
     <h2>@Model.Message</h2>
-    <p>last_update_at:</p>
+    <div style="color: red">
+        <p>last_update_at:</p>
+    </div>
 </div>
